# ip-location-rs

./: .gitignore  AGENTS.md  Cargo.toml  DBIP-LICENSE  Dockerfile  README.md  SECURITY.md  openapi.yaml  run.sh
.github/workflows/: release.yaml  semgrep.yaml  test.yaml
manifests/: deployment.yaml
manifests/argo/: application.yaml  deployment.yaml  service.yaml
src/: db.rs  main.rs  models.rs
src/handlers/: asn.rs  country.rs  ip.rs  mod.rs
